--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,16 @@
   margin: auto;
 }
 
+li {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
+  color: currentColor;
+}
+a:hover {
+  color: purple;
 }
 
 .logo {
@@ -92,4 +100,41 @@ a {
 
 .menu-btn:hover {
   transform: rotate(90deg);
+}
+
+      /** posts **/
+
+.post-list {
+  margin: auto;
+  padding: 0;
+}
+
+.btn-test {
+  background-color: pink;
+  transition: all 1s ease;
+}
+
+.btn-test:active{
+  color:red;
+  background:blue;
+  transform:  translateX(500px);
+}
+
+.post-card {
+  margin: auto;
+  border-radius: 5px;
+  /* border: solid 1px grey; */
+  max-width: 40%;
+  margin-top: 1em;
+  padding: 1em;
+  background: lightblue;
+  transition: all .3s ease;
+}
+
+.post-card p {
+  margin: 0;
+}
+
+.post-card:hover {
+  background: rgb(0, 170, 226);
 }
