--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   margin: auto;
+  margin-bottom: 2em;
 }
 
 li {
@@ -24,6 +25,7 @@ a:hover {
 
 .nav-bar {
   display: flex;
+  background: rgb(194, 177, 255);
   flex-direction: row;
   align-items: center;
   border-bottom: solid #ddd 1px;
@@ -136,5 +138,28 @@ a:hover {
 }
 
 .post-card:hover {
-  background: rgb(0, 170, 226);
+  background:  rgb(194, 177, 255);
+  scale: 1.1;
 }
+
+/*** posts list ***/
+
+.post-card {
+  margin-top: 2em;
+  border-radius: 20px;
+  background: #ffffff;
+  box-shadow:  3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
+}
+
+.btn-tag {
+  color: white;
+  margin-top:1em;
+  background: rgb(255, 60, 0);
+  border-radius: 5px;
+  border: none;
+  padding: .2em .5em;
+  align-items: center;
+  justify-items: center;
+}
+
+/*** post details ***/
