--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,17 @@
   margin: auto;
   /* margin-bottom: 2em; */
   top: 0;
+  height: 100vh;
+}
+
+body {
+  height: 100vh;
+}
+
+.main-container{
+  /* min-height: 100vh; */
+  /* display: grid;
+  grid-template-rows: auto 1fr auto; */
 }
 
 li {
@@ -15,11 +26,25 @@ li {
 
 a {
   text-decoration: none;
-  color: currentColor;
+  transition: all .3s ease;
+}
+
+
+
+.post-container>h2 {
+  background: linear-gradient(90deg, rgba(171,0,255,1) 0%, rgba(0,255,218,1) 100%);
+  -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
+  border-radius: 5px;
+  padding: 10px;
+  max-width: 40%;
+  margin: 2em auto;
+
 }
 
 a:hover {
-  color: purple;
+  color: rgba(171,0,255,1);
 }
 
 .logo {
@@ -32,9 +57,14 @@ a:hover {
   transition: rotate 1s;
 }
 
+.logo:hover{
+  color: red;
+  rotate: 360deg;
+}
+
 .nav-bar {
   display: flex;
-  /* background: rgb(194, 177, 255); */
+  background: white;
   justify-content: space-between;
   -webkit-box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2); 
   box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2);
@@ -61,7 +91,7 @@ display: flex;
 }
 
 .nav-bar .nav-item:hover{
-  background: linear-gradient(90deg, rgba(171,0,255,.5) 0%, rgba(0,255,218,.5) 100%);
+  background: linear-gradient(90deg, rgba(171,0,255,.3) 0%, rgba(0,255,218,.3) 100%);
   color: black;
   transition: all .2s ease-in-out;
   border-radius: 5px;
@@ -71,7 +101,12 @@ display: flex;
 
 .home {
   max-width: 40%;
-  margin: auto;
+  margin: 10em auto 0 auto;
+  /* margin: 0 auto; */
+  /* height: 100%; */
+  min-height:80%;
+  /* top: 0%; */
+  /* position: relative; */
 }
 
 .home-title {
@@ -85,11 +120,6 @@ display: flex;
 
 .home img{
   width: 100%; 
-}
-
-.logo:hover{
-  color: red;
-  rotate: 360deg;
 }
 
 /*** burger menu ***/
@@ -154,6 +184,7 @@ display: flex;
 
 .post-card {
   margin: auto;
+  color: black;
   border-radius: 5px;
   max-width: 40%;
   margin-top: 1em;
@@ -166,9 +197,21 @@ display: flex;
   margin: 0;
 }
 
+
 .post-card:hover {
-  background:  rgb(194, 177, 255);
+  /* background: linear-gradient(90deg, rgba(171,0,255,1) 0%, rgba(0,255,218,1) 100%);
+  -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent; */
+  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
   scale: 1.1;
+}
+
+.post-card p, .post-card h2 {
+  transition: all .3s ease;
+}
+
+.post-card p:hover, .post-card h2:hover {
+  color:rgba(171,0,255,1);
 }
 
 /*** posts list ***/
@@ -183,7 +226,7 @@ display: flex;
 .btn-tag {
   color: white;
   margin-top:1em;
-  background: rgb(255, 60, 0);
+  background: rgba(171,0,255,1);
   border-radius: 5px;
   border: none;
   padding: .2em .5em;
@@ -212,18 +255,19 @@ display: flex;
 
 .post-number:hover{
   scale:1.1;
-  background:rgb(194, 177, 255);
+  /* background:rgb(194, 177, 255); */
 }
 
 .post-detail {
   box-shadow:  3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
   transition: all .3s ease-in-out;
   border-radius: 5px;
+  margin: 2em 0;
 }
 
 .post-detail:hover{
   scale:1.1;
-  background:rgb(194, 177, 255);
+  /* background:rgb(194, 177, 255); */
 }
 .post-detail img{
   width:100%;
@@ -243,6 +287,12 @@ display: flex;
 
 /*** footer ***/
 
+.footer-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .footer {
   display: flex;
   flex-direction: row;
@@ -250,21 +300,29 @@ display: flex;
   bottom:0;
   position:sticky;
   padding: 1em;
-  margin: 1em 0 0 0;
-  background:rgb(194, 177, 255);
+  margin: 2em 0 0 0;
+  /* background:rgb(194, 177, 255); */
+  background:white;
+  box-shadow:  3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
   z-index: 50;
+  top: 90vh;
 }
 
 .anim {
+  height: 100vh;
+  color: #fff;
+  position: absolute;
+  background:blue;
+}
+
+.anim-sticky {
+  margin: 100px auto -100px;
+  height: 100px;
+  width: 200px;
+  background-color: firebrick;
   position: sticky;
-  z-index: -50;
-  left: 0;
   top: 50%;
-  width:50px;
-  height:50px;
-  background: green;
-  display: flex;
-  animation-name: move;
+  padding: 10px;
 }
 
 /* @keyframes move{
