--- a/src/App.css
+++ b/src/App.css
@@ -174,12 +174,19 @@ display: flex;
 }
 
 .btn-test {
-  background-color: pink;
+  position: relative;
+  border: 4px solid transparent;
+  border-radius: 16px;
+  background-position: 0 0;
+  background: linear-gradient(orange, violet);
+  background-clip: padding-box;
+  padding: 10px;
   transition: all 1s ease;
 }
 
 .btn-test:active{
-  background:blue;
+  background-position:0% 100%;
+  color: white;
   transform:  translateX(500px);
 }
 
