--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,13 @@
-* {
+@mixin gradient-text() {
+  background: linear-gradient(90deg, rgba(171,0,255,1) 0%, rgba(0,255,218,1) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+*{
   box-sizing: border-box;
-  color: #740074;
+  color: rgb(116, 0, 116);
 }
 
 .App {
@@ -15,7 +22,7 @@ body {
   height: 100vh;
 }
 
-.main-container {
+.main-container{
   /* min-height: 100vh; */
   /* display: grid;
   grid-template-rows: auto 1fr auto; */
@@ -27,37 +34,34 @@ li {
 
 a {
   text-decoration: none;
-  transition: all 0.3s ease;
+  transition: all .3s ease;
 }
 
-.post-container > h2 {
-  background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+
+
+.post-container>h2 {
+  @include gradient-text();
+  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
   border-radius: 5px;
   padding: 10px;
   max-width: 40%;
   margin: 2em auto;
+
 }
 
 a:hover {
-  color: #ab00ff;
+  color: rgba(171,0,255,1);
 }
 
 .logo {
-  font-family: "Monoton", cursive;
-  margin: 0.2em 0 0.2em 0.5em;
+  font-family: 'Monoton', cursive;
+  margin: .2em 0 .2em .5em;
   font-size: 30px;
-  background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+  @include gradient-text();
   transition: rotate 1s;
 }
 
-.logo:hover {
+.logo:hover{
   rotate: 360deg;
 }
 
@@ -65,33 +69,34 @@ a:hover {
   display: flex;
   background: white;
   justify-content: space-between;
-  -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2); 
+  box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2);
   position: sticky;
   top: 0;
   z-index: 50;
 }
 
 .nav-links {
-  /* background: blue; */
-  display: flex;
-  /* justify-content: center; */
+/* background: blue; */
+display: flex;
+/* justify-content: center; */
 }
+
 
 .nav-item {
   background: white;
   margin-right: 1em;
-  transition: color 0.3s;
+  transition: color .3s;
   display: flex;
   align-items: center;
   padding-right: 5px;
   padding-left: 5px;
 }
 
-.nav-bar .nav-item:hover {
-  background: linear-gradient(90deg, rgba(171, 0, 255, 0.3) 0%, rgba(0, 255, 218, 0.3) 100%);
+.nav-bar .nav-item:hover{
+  background: linear-gradient(90deg, rgba(171,0,255,.3) 0%, rgba(0,255,218,.3) 100%);
   color: black;
-  transition: all 0.2s ease-in-out;
+  transition: all .2s ease-in-out;
   border-radius: 5px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -102,28 +107,26 @@ a:hover {
   margin: 10em auto 0 auto;
   /* margin: 0 auto; */
   /* height: 100%; */
-  min-height: 80%;
+  min-height:80%;
   /* top: 0%; */
   /* position: relative; */
 }
 
 .home-title {
-  background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+  @include gradient-text();
+  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
   border-radius: 5px;
   padding: 10px;
 }
 
-.home img {
-  width: 100%;
-  height: 100%;
+.home img{
+  width: 100%; 
+  height:100%;
   border-radius: 10px;
 }
 
 /*** burger menu ***/
+
 .menu-btn {
   position: relative;
   display: flex;
@@ -133,7 +136,7 @@ a:hover {
   height: 80px;
   cursor: pointer;
   color: black;
-  transition: all 0.3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .menu-btn__burger {
@@ -145,7 +148,7 @@ a:hover {
 
 .menu-btn__burger::before,
 .menu-btn__burger::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 40px;
   height: 5px;
@@ -165,7 +168,8 @@ a:hover {
   transform: rotate(90deg);
 }
 
-/** posts **/
+      /** posts **/
+
 .post-list {
   margin: auto;
   padding: 0;
@@ -182,10 +186,10 @@ a:hover {
   transition: all 1s ease;
 }
 
-.btn-test:active {
-  background-position: 0% 100%;
+.btn-test:active{
+  background-position:0% 100%;
   color: white;
-  transform: translateX(500px);
+  transform:  translateX(500px);
 }
 
 .post-card {
@@ -196,7 +200,7 @@ a:hover {
   margin-top: 1em;
   padding: 1em;
   background: lightblue;
-  transition: all 0.3s ease;
+  transition: all .3s ease;
 }
 
 .post-card p {
@@ -209,92 +213,94 @@ a:hover {
   border-radius: 10px;
 }
 
+
 .post-card:hover {
-  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
   scale: 1.1;
 }
 
 .post-card p, .post-card h2 {
-  transition: all 0.3s ease;
+  transition: all .3s ease;
 }
 
 .post-card p:hover, .post-card h2:hover {
-  color: #ab00ff;
+  color:rgba(171,0,255,1);
 }
 
 /*** posts list ***/
+
 .post-card {
   margin-top: 2em;
   border-radius: 5px;
   background: #ffffff;
-  box-shadow: 3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
+  box-shadow:  3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
 }
 
 .btn-tag {
   color: white;
-  margin-top: 1em;
-  background: #ab00ff;
+  margin-top:1em;
+  background: rgba(171,0,255,1);
   border-radius: 5px;
   border: none;
-  padding: 0.2em 0.5em;
+  padding: .2em .5em;
   align-items: center;
   justify-items: center;
 }
 
 /*** post details ***/
+
 .post-page {
   max-width: 50%;
   margin: auto;
   border-radius: 5px;
-  min-height: 100%;
+  min-height:100%;
 }
 
 .post-number {
-  background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+  @include gradient-text();
+  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
   border-radius: 5px;
   padding: 10px;
   margin-top: 2rem;
-  transition: all 0.3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
-.post-number:hover {
-  scale: 1.1;
+.post-number:hover{
+  scale:1.1;
   /* background:rgb(194, 177, 255); */
 }
 
 .post-detail {
-  box-shadow: 3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
-  transition: all 0.3s ease-in-out;
+  box-shadow:  3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
+  transition: all .3s ease-in-out;
   border-radius: 5px;
   margin: 2em 0;
 }
 
-.post-detail:hover {
-  scale: 1.1;
-  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+.post-detail:hover{
+  scale:1.1;
+  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
   scale: 1.1;
 }
-
-.post-detail img {
-  width: 100%;
+.post-detail img{
+  width:100%;
+  // height: 100%;
 }
 
 .post-title {
   margin: 0;
-  padding: 0.5em 0;
+  padding: .5em 0;
 }
 
 .post-body {
   margin: 0;
-  padding: 0.5em 0;
+  padding: .5em 0;
   border-radius: 0 0 5px 5px;
+
 }
 
 /*** footer ***/
+
 .footer-container {
   position: absolute;
   bottom: 0;
@@ -305,13 +311,13 @@ a:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  bottom: 0;
-  position: sticky;
+  bottom:0;
+  position:sticky;
   padding: 1em;
   margin: 2em 0 0 0;
   /* background:rgb(194, 177, 255); */
-  background: white;
-  box-shadow: 3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
+  background:white;
+  box-shadow:  3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
   z-index: 50;
   top: 90vh;
 }
@@ -321,11 +327,12 @@ a:hover {
 }
 
 /*** test ***/
+
 .anim {
   height: 100%;
   color: #fff;
   position: absolute;
-  background: blue;
+  background:blue;
 }
 
 .anim-sticky {
@@ -347,5 +354,3 @@ a:hover {
     left: 100%;
   }
 } */
-
-/*# sourceMappingURL=App.css.map */
