--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   color: #740074;
 }
 
+html {
+  scroll-behavior: smooth;
+  transition: all 0 30s ease;
+}
+
 .App {
   text-align: center;
   margin: auto;
@@ -15,10 +20,48 @@ body {
   height: 100vh;
 }
 
-.main-container {
-  /* min-height: 100vh; */
-  /* display: grid;
-  grid-template-rows: auto 1fr auto; */
+.div-component {
+  margin-top: 7em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5em;
+  place-items: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 40%;
+  padding-bottom: 5em;
+}
+
+.div-component > h2 {
+  width: 100%;
+  background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+/* min-height: 100vh; */
+/* display: grid;
+grid-template-rows: auto 1fr auto; */
+.btn-std {
+  background: white;
+  border-radius: 5px;
+  border: 0 transparent solid;
+  padding: 1em;
+  max-width: 100px;
+  background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+  transition: all ease 0.3s;
+}
+
+button {
+  transition: all ease 0.3s;
 }
 
 li {
@@ -30,6 +73,10 @@ a {
   transition: all 0.3s ease;
 }
 
+.post-container {
+  padding-bottom: 5em;
+}
+
 .post-container > h2 {
   background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
   -webkit-background-clip: text;
@@ -38,12 +85,16 @@ a {
   box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
   border-radius: 5px;
   padding: 10px;
-  max-width: 40%;
-  margin: 2em auto;
+}
+
+a > button:hover {
+  scale: 1.2;
+  cursor: pointer;
 }
 
 a:hover {
   color: #ab00ff;
+  cursor: pointer;
 }
 
 .logo {
@@ -67,9 +118,10 @@ a:hover {
   justify-content: space-between;
   -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
-  position: sticky;
   top: 0;
   z-index: 50;
+  position: fixed;
+  width: 100%;
 }
 
 .nav-links {
@@ -119,7 +171,6 @@ a:hover {
 
 .home img {
   width: 100%;
-  height: 100%;
   border-radius: 10px;
 }
 
@@ -174,11 +225,9 @@ a:hover {
 .btn-test {
   position: relative;
   border: 4px solid transparent;
-  border-radius: 16px;
-  background-position: 0 0;
-  background: linear-gradient(orange, violet);
-  background-clip: padding-box;
+  border-radius: 5px;
   padding: 10px;
+  margin-top: 1em;
   transition: all 1s ease;
 }
 
@@ -192,7 +241,6 @@ a:hover {
   margin: auto;
   color: black;
   border-radius: 5px;
-  max-width: 40%;
   margin-top: 1em;
   padding: 1em;
   background: lightblue;
@@ -231,20 +279,24 @@ a:hover {
 }
 
 .btn-tag {
-  color: white;
+  color: white !important;
   margin-top: 1em;
-  background: #ab00ff;
   border-radius: 5px;
   border: none;
   padding: 0.2em 0.5em;
   align-items: center;
   justify-items: center;
+  background: #ab00ff;
+  -webkit-background-clip: none;
+  background-clip: none;
+  -webkit-text-fill-color: none;
 }
 
 /*** post details ***/
 .post-page {
   max-width: 50%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 5px;
   min-height: 100%;
 }
@@ -305,15 +357,14 @@ a:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  bottom: 0;
-  position: sticky;
   padding: 1em;
   margin: 2em 0 0 0;
-  /* background:rgb(194, 177, 255); */
   background: white;
   box-shadow: 3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
   z-index: 50;
-  top: 90vh;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
 }
 
 .footer a:hover {
@@ -347,5 +398,24 @@ a:hover {
     left: 100%;
   }
 } */
+/*** CGU ***/
+.btn-return-top {
+  position: fixed;
+  top: 50vh;
+  left: 10px;
+  padding: 1em;
+  border-radius: 5px;
+  background: linear-gradient(90deg, #ab00ff 0%, #00ffda 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+  transition: ease all 0.3s;
+}
+
+.btn-return-top:hover {
+  scale: 1.2;
+  transform: translateX(12px);
+}
 
 /*# sourceMappingURL=App.css.map */
