--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,18 @@
 	-webkit-text-fill-color: transparent;
 }
 
+@mixin gradient-shadow() {
+  box-shadow: 3px 3px 10px rgba(171, 0, 255, 0.5), 0 0 10px rgba(0, 255, 218, 0.5);
+}
+
 *{
   box-sizing: border-box;
   color: rgb(116, 0, 116);
+}
+
+html {
+  scroll-behavior: smooth;
+  transition: all 0 30s ease;
 }
 
 .App {
@@ -22,10 +31,46 @@ body {
   height: 100vh;
 }
 
-.main-container{
+.div-component {
+  margin-top: 7em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5em;
+  place-items: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 40%;
+  padding-bottom: 5em;
+}
+
+.div-component>h2 {
+  width: 100%;
+  @include gradient-text();
+  @include gradient-shadow();
+  border-radius: 5px;
+  padding: 10px;
+}
+
+// .main-container{
   /* min-height: 100vh; */
   /* display: grid;
   grid-template-rows: auto 1fr auto; */
+// }
+
+.btn-std {
+  background: white;
+  border-radius: 5px;
+  border: 0 transparent solid;
+  padding: 1em;
+  // color: black;
+  max-width: 100px;
+  @include gradient-text();
+  @include gradient-shadow();
+  transition: all ease .3s;
+}
+
+button {
+  transition: all ease .3s;
 }
 
 li {
@@ -37,20 +82,28 @@ a {
   transition: all .3s ease;
 }
 
+.post-container {
+  padding-bottom: 5em;
+}
 
 
 .post-container>h2 {
   @include gradient-text();
-  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
+  @include gradient-shadow();
   border-radius: 5px;
   padding: 10px;
-  max-width: 40%;
-  margin: 2em auto;
+  // max-width: 40%;
+  // margin: 2em auto;
+}
 
+a>button:hover {
+  scale: 1.2;
+  cursor:pointer;
 }
 
 a:hover {
   color: rgba(171,0,255,1);
+  cursor:pointer;
 }
 
 .logo {
@@ -71,9 +124,11 @@ a:hover {
   justify-content: space-between;
   -webkit-box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2); 
   box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2);
-  position: sticky;
+  // position: sticky;
   top: 0;
   z-index: 50;
+  position: fixed;
+  width: 100%;
 }
 
 .nav-links {
@@ -114,14 +169,14 @@ display: flex;
 
 .home-title {
   @include gradient-text();
-  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
+  @include gradient-shadow();
   border-radius: 5px;
   padding: 10px;
 }
 
 .home img{
   width: 100%; 
-  height:100%;
+  // height:100%;
   border-radius: 10px;
 }
 
@@ -173,16 +228,18 @@ display: flex;
 .post-list {
   margin: auto;
   padding: 0;
+  // max-width: 40%;
 }
 
 .btn-test {
   position: relative;
   border: 4px solid transparent;
-  border-radius: 16px;
-  background-position: 0 0;
-  background: linear-gradient(orange, violet);
-  background-clip: padding-box;
+  border-radius: 5px;
+  // background-position: 0 0;
+  // background: linear-gradient(orange, violet);
+  // background-clip: padding-box;
   padding: 10px;
+  margin-top: 1em;
   transition: all 1s ease;
 }
 
@@ -196,7 +253,7 @@ display: flex;
   margin: auto;
   color: black;
   border-radius: 5px;
-  max-width: 40%;
+  // max-width: 40%;
   margin-top: 1em;
   padding: 1em;
   background: lightblue;
@@ -215,7 +272,7 @@ display: flex;
 
 
 .post-card:hover {
-  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
+  @include gradient-shadow();
   scale: 1.1;
 }
 
@@ -237,28 +294,34 @@ display: flex;
 }
 
 .btn-tag {
-  color: white;
+  color: white !important;
   margin-top:1em;
-  background: rgba(171,0,255,1);
   border-radius: 5px;
+  // z-index: -50;
   border: none;
   padding: .2em .5em;
   align-items: center;
   justify-items: center;
+  background: rgba(171,0,255,1);
+  // background: linear-gradient(90deg, rgba(171,0,255,1) 0%, rgba(0,255,218,1) 100%);
+  -webkit-background-clip: none;
+  background-clip: none;
+	-webkit-text-fill-color: none;
 }
 
 /*** post details ***/
 
 .post-page {
   max-width: 50%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 5px;
   min-height:100%;
 }
 
 .post-number {
   @include gradient-text();
-  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
+  @include gradient-shadow();
   border-radius: 5px;
   padding: 10px;
   margin-top: 2rem;
@@ -279,7 +342,7 @@ display: flex;
 
 .post-detail:hover{
   scale:1.1;
-  box-shadow: 3px 3px 10px rgba(171,0,255,.5), 0 0 10px rgba(0,255,218,.5);
+  @include gradient-shadow();
   scale: 1.1;
 }
 .post-detail img{
@@ -311,15 +374,16 @@ display: flex;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  bottom:0;
-  position:sticky;
+  // position:sticky;
   padding: 1em;
   margin: 2em 0 0 0;
-  /* background:rgb(194, 177, 255); */
   background:white;
   box-shadow:  3px 3px 10px #bebebea9, -7px -7px 14px #ffffff;
   z-index: 50;
-  top: 90vh;
+  // top: 90vh;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
 }
 
 .footer a:hover {
@@ -354,3 +418,30 @@ display: flex;
     left: 100%;
   }
 } */
+
+/*** CGU ***/
+
+.cgu {
+  // margin-bottom: 5em;
+}
+
+// #condition-utilisation ~ h3{
+//   background: red;
+// }
+
+.btn-return-top {
+  position: fixed;
+  top: 50vh;
+  left: 10px;
+  // border: solid black 1px;
+  padding: 1em;
+  border-radius: 5px;
+  @include gradient-text();
+  @include gradient-shadow();
+  transition: ease all .3s;
+}
+
+.btn-return-top:hover {
+  scale: 1.2;
+  transform: translateX(12px)
+}
